--- a/src/Bundre.Task.App/Views/_ViewImports.cshtml
+++ b/src/Bundre.Task.App/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Bundre.Task.App
-@using Bundre.Task.App.Models
+﻿@using Bundre.Tasks.App
+@using Bundre.Tasks.App.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
